<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">口袋OA</string>

    <string name="user_id">用户ID</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="back_pressed_again">再按一次退出应用</string>
    <string name="login_loading">正在登录中...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_submit">提交</string>
    <string name="action_add">添加</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>

    <string name="navigation_home">首页</string>
    <string name="navigation_customer">客户</string>
    <string name="navigation_contact">联系人</string>
    <string name="navigation_opportunity">商机</string>
    <string name="navigation_contract">合同</string>
    <string name="navigation_product">产品</string>
    <string name="navigation_business">业务</string>
    <string name="navigation_logout">登出</string>
    <string name="navigation_others">其他</string>

    <string name="title_home">口袋OA</string>

    <string name="title_customer">客户</string>
    <string name="title_contact">联系人</string>
    <string name="title_opportunity">商机</string>
    <string name="title_contract">合同</string>
    <string name="title_product">产品</string>
    <string name="title_business">业务</string>
    <string name="title_followup">跟进记录</string>

    <string name="title_user_edit">编辑资料</string>

    <string name="title_customer_add">添加新客户</string>
    <string name="title_customer_detail">客户详情</string>
    <string name="title_customer_edit">编辑客户</string>

    <string name="title_contact_add">添加新联系人</string>
    <string name="title_contact_detail">联系人详情</string>
    <string name="title_contact_edit">编辑联系人</string>

    <string name="title_opportunity_add">添加新商机</string>
    <string name="title_opportunity_detail">商机详情</string>
    <string name="title_opportunity_edit">编辑商机</string>

    <string name="title_contract_add">添加新合同</string>
    <string name="title_contract_detail">合同详情</string>
    <string name="title_contract_edit">编辑合同</string>

    <string name="title_product_add">添加新产品</string>
    <string name="title_product_detail">产品详情</string>
    <string name="title_product_edit">编辑产品</string>

    <string name="title_followup_add">添加跟进记录</string>
    <string name="title_followup_detail">跟进记录详情</string>
    <string name="title_followup_edit">编辑跟进记录</string>

    <string name="title__goal_setting">员工目标设置</string>
    <string name="title_attention_setting">提醒设置</string>
    <string name="title_table_show">报表展现</string>

    <string name="username">用户名</string>
    <string name="name">姓名</string>
    <string name="mobile">手机号</string>
    <string name="tel">电话号码</string>
    <string name="gender">性别</string>
    <string name="email">邮箱</string>
    <string name="avatar">头像</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>

    <string name="tab_my_customers">我的客户</string>
    <string name="tab_all_customers">所有客户</string>

    <string name="customer_type_important">重要客户</string>
    <string name="customer_type_normal">一般客户</string>
    <string name="customer_type_low_value">低价值客户</string>

    <string name="customer_status_1">初访</string>
    <string name="customer_status_2">意向</string>
    <string name="customer_status_3">报价</string>
    <string name="customer_status_4">成交</string>
    <string name="customer_status_5">暂时搁置</string>

    <string name="customer_name">名称</string>
    <string name="customer_profile">简介</string>
    <string name="customer_type">类型</string>
    <string name="customer_status">状态</string>
    <string name="customer_region">地区</string>
    <string name="customer_source">来源</string>
    <string name="customer_size">公司规模</string>
    <string name="customer_tel">电话</string>
    <string name="customer_email">邮箱</string>
    <string name="customer_website">网址</string>
    <string name="customer_address">地址</string>
    <string name="customer_zipcode">邮编</string>
    <string name="customer_remark">备注</string>

    <string name="tab_my_contacts">我的联系人</string>
    <string name="tab_all_contacts">所有联系人</string>

    <string name="contact_name">名称</string>
    <string name="contact_customer">客户</string>
    <string name="contact_age">年龄</string>
    <string name="contact_gender">性别</string>
    <string name="contact_mobile">手机号</string>
    <string name="contact_tel">电话</string>
    <string name="contact_email">邮箱</string>
    <string name="contact_address">地址</string>
    <string name="contact_zipcode">邮编</string>
    <string name="contact_qq">QQ</string>
    <string name="contact_wechat">微信</string>
    <string name="contact_wangwang">旺旺</string>
    <string name="contact_remark">备注</string>

    <string name="tab_my_opportunities">我的商机</string>
    <string name="tab_all_opportunities">所有商机</string>

    <string name="opportunity_type_important">重要商机</string>
    <string name="opportunity_type_normal">普通商机</string>

    <string name="opportunity_status_1">初步洽谈</string>
    <string name="opportunity_status_2">需求确定</string>
    <string name="opportunity_status_3">方案报价</string>
    <string name="opportunity_status_4">谈判合同</string>
    <string name="opportunity_status_5">赢单</string>
    <string name="opportunity_status_6">输单</string>

    <string name="opportunity_title">标题</string>
    <string name="opportunity_customer">客户</string>
    <string name="opportunity_estimatedamount">预计销售金额</string>
    <string name="opportunity_type">类型</string>
    <string name="opportunity_status">状态</string>
    <string name="opportunity_source">来源</string>
    <string name="opportunity_channel">渠道商</string>
    <string name="opportunity_acquisitiondate">获取日期</string>
    <string name="opportunity_expecteddate">预计签单日期</string>
    <string name="opportunity_remark">备注</string>

    <string name="tab_my_contracts">我的合同</string>
    <string name="tab_all_contracts">所有合同</string>

    <string name="contract_type_1">直销合同</string>
    <string name="contract_type_2">分销合同</string>
    <string name="contract_type_3">其他合同</string>

    <string name="contract_status_1">未开始</string>
    <string name="contract_status_2">执行中</string>
    <string name="contract_status_3">成功结束</string>
    <string name="contract_status_4">意外终止</string>

    <string name="contract_title">标题</string>
    <string name="contract_customer">客户</string>
    <string name="contract_opportunity">商机</string>
    <string name="contract_type">类型</string>
    <string name="contract_status">状态</string>
    <string name="contract_amount">总金额</string>
    <string name="contract_startdate">开始日期</string>
    <string name="contract_enddate">结束日期</string>
    <string name="contract_number">编号</string>
    <string name="contract_paymethod">付款方式</string>
    <string name="contract_clientcontractor">客户方签约人</string>
    <string name="contract_ourcontractor">我方签约人</string>
    <string name="contract_signingdate">签约日期</string>
    <string name="contract_attachment">合同附件</string>
    <string name="contract_remark">备注</string>

    <string name="product_name">名称</string>
    <string name="product_sn">编号</string>
    <string name="product_price">标准单价</string>
    <string name="product_unit">销售单位</string>
    <string name="product_cost">单位成本</string>
    <string name="product_introduction">介绍</string>
    <string name="product_picture">图片</string>
    <string name="product_remark">备注</string>

    <string name="followup_content">内容</string>
    <string name="followup_remark">备注</string>

    <string name="business_goal_setting">员工目标设置</string>
    <string name="business_attention_setting">提醒设置</string>
    <string name="business_table_show">报表展现</string>

    <string name="fail_loading">加载失败</string>
    <string name="welcome_use">欢迎使用口袋OA</string>
    <string name="select_picture">选择图片</string>

    <string name="nothing">无</string>

</resources>