<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_goal_setting"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/business_goal_setting"/>
        <Button
            android:id="@+id/btn_attention_setting"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/business_attention_setting"/>
        <Button
            android:id="@+id/btn_table_show"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/business_table_show"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>